<resources>
    <string name="app_name">Justins Weather App!~</string>
    <string name="city_search_string">Input a city to search for....</string>
    <string name="search_button_string">City Search</string>
    <string name="current_temp_in_string">Currently in:</string>
    <string name="Current">Currently In Kitchener</string>
    <string name="weatherIcon">Weather Icon</string>
    <string name="City">City</string>
    <string name="TemperatureValue">99</string>
    <string name="FiveDayString">Five Day Kitchener</string>
    <string name="title_activity_five_day_view">fiveDayView</string>
    <string name="day_text">Thursday</string>
    <string name="five_day_text">Five Day Forecast</string>
    <string name="hi_text">Hi: </string>
    <string name="low_text">Low: </string>
    <string name="Pretend_hi">85° </string>
    <string name="Pretend_low">-35° </string>
    <string name="Pretend_description">Description </string>
    <string name="humidity">Humidity:  </string>
    <string name="sunrise">Sunrise: </string>
    <string name="sunset">Sunset: </string>
    <string name="Search">Search For A Location </string>
    <string name="Gps">Use Gps Location</string>
    <string name="Location">Your current Location: </string>
    <string name="Latitude">Latitude: </string>
    <string name="Longitude">Longitude: </string>
    <string name="MESSAGE">See logcat for Gps location....Ran out of time </string>
</resources>
