<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myBlue"
    tools:context=".fiveday">


    <TextView
        android:id="@+id/day1Text"
        android:layout_width="283dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/day_text"
        android:textColor="@color/textBlue"
        android:textSize="50sp"
        app:fontFamily="cursive"
        app:layout_constraintBottom_toTopOf="@+id/description1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fiveDayText" />

    <ImageView
        android:id="@+id/day1Icon"
        android:layout_width="184dp"
        android:layout_height="184dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description1"
        app:srcCompat="@drawable/accu13s" />

    <TextView
        android:id="@+id/fiveDayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/FiveDayString"
        android:textColor="@color/textBlue"
        android:textSize="50sp"
        app:fontFamily="cursive"
        app:layout_constraintBottom_toTopOf="@+id/day1Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi_text"
        android:textAllCaps="false"
        android:textColor="@color/textBlue"
        android:textSize="50sp"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/highTemp1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day1Icon" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low_text"
        android:textColor="@color/textBlue"
        android:textSize="50sp"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lowTemp1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/highTemp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pretend_hi"
        android:textColor="@color/textBlue"
        android:textSize="50sp"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBottom_toTopOf="@+id/lowTemp1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/day1Icon" />

    <TextView
        android:id="@+id/lowTemp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pretend_low"
        android:textColor="@color/textBlue"
        android:textSize="50sp"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/highTemp1" />

    <TextView
        android:id="@+id/description1"
        android:layout_width="354dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/Pretend_description"
        android:textColor="@color/textBlue"
        android:textSize="25sp"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBottom_toTopOf="@+id/day1Icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day1Text" />
</androidx.constraintlayout.widget.ConstraintLayout>